Change history
--------------

Release Candidate 1
===================

- Fixed MR-146
  "FormHelper must be able to handle IList<T>"

- Fixed MR-145 
  "Change node/section name from monoRail to monorail on configuration file"
  
  Now on the configuration, use <monorail> instead of <monoRail>

- Included Test site for ActiveRecord support project, watir tests included

- Refactored ARDataBinder to support HasMany and HasAndBelongsToMany

- Applied Ernst Naezer <enix@ch10.shuis.tudelft.nl>'s patch fixing build

- Introduced [AjaxAction] attribute. Any action marked with this attribute
  can be accessed on client-side scripting using a JavaScript proxy, like
  this:

     $ajaxHelper.getJavascriptFunctions()
       ## MANDATORY, must come before any call to generateJSProxy

     $ajaxHelper.generateJSProxy('thisController')
       ## will declare an object named "thisController", allowing access
       ## to all [AjaxAction]s on the current controller

     $ajaxHelper.generateJSProxy('util', 'lists', 'myLists')
       ## will declare an object named "myLists", allowing access
       ## to all [AjaxAction]s on the controller named 'lists', in the 'util' area

  Note that proxies can perform synchronous (blocking) or asynchronous (non-blocking) calls.
  For asynchronous calls, you must always supply a JavaScript function as an additional
  last parameter. When that parameter is absent, the proxy will perform a synchronous call.

     [AjaxAction] public void Sum(int num1, int num2) { RenderText(Convert.ToString(num1 + num2)); }

  You can write:

     // synchronous call
     $('result').value = myLists.sum($('num1').value, $('num2').value);

  Or:

     // asynchronous call
     myLists.sum($('num1').value, $('num2').value, function(t) { $('result').value = t.responseText; });

  Being:

     $('num1').value     = the value of an input with id=num1
     $('num2').value     = the value of an input with id=num2
     function(t) { ... } = the callback